# avif-imageio

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradlew  jitpack.yml  settings.gradle
.github/scripts/: build-linux.sh
.github/workflows/: build-native.yml  ci.yml  release.yml
.kiro/specs/avif-imageio/: blog-avif-imageio.md  design.md  requirements.md  tasks.md
src/main/c/: CMakeLists.txt  avif_imageio.c  avif_imageio.h
src/main/java/com/github/avifimageio/: Avif.java  AvifDecoderOptions.java  AvifEncoderOptions.java  AvifImageReader.java  AvifImageReaderSpi.java  AvifImageWriter.java  AvifImageWriterSpi.java  AvifMetadata.java  AvifWriteParam.java  DecodeResult.java  ImageInfo.java  NativeLibraryUtils.java
